Update dei namespaces

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tnfdam/env-encrypter",
+    "name": "jviscuso/env-encrypter",
     "description": "This package encrypts the desired env file and makes in available for versioning and eventually decrypt through github actions on deployment",
     "version": "0.1",
     "require": {
@@ -12,18 +12,18 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Tnfdam\\EnvEncrypter\\": "src"
+            "Jviscuso\\EnvEncrypter\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tnfdam\\EnvEncrypter\\Tests\\": "tests"
+            "Jviscuso\\EnvEncrypter\\Tests\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Tnfdam\\EnvEncrypter\\EnvEncrypterServiceProvider"
+                "Jviscuso\\EnvEncrypter\\EnvEncrypterServiceProvider"
             ]
         }
     },
@@ -37,7 +37,7 @@
     "authors": [
         {
             "name": "Jacopo Viscuso",
-            "email": "jacopo.viscuso@basecampstudio.it"
+            "email": "me@jacopoviscuso.it"
         }
     ],
     "minimum-stability": "stable"
