--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "illuminate/support": "^8.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.5",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.0"
     },
     "license": "MIT",
