--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "type": "library",
     "require": {
         "php": "^8.1|^8.2",
-        "guzzlehttp/psr7": "2.4.5"
+        "guzzlehttp/psr7": "^2.4.5"
     },
     "require-dev": {
         "laravel/pint": "^1.5",
