--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^11.3"
+        "illuminate/support": "^9|^10|^11"
     },
     "autoload": {
         "psr-4": {
