--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^9|^10|^11"
+        "illuminate/support": "^9|^10|^11",
+        "laravel/prompts": "^0.3.2"
     },
     "autoload": {
         "psr-4": {
