--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "laravel/laravel": "^9.0|^10.0|^11.0|^12.0",
+        "illuminate/console": "^9.0|^10.0|^11.0|^12.0",
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
         "laravel/prompts": "^0.3.2"
     },
     "autoload": {
